# firepower-mcp

./: .env.example  .gitignore  .mcp.json  EXAMPLE_PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fmc_mcp/: __init__.py  client.py  config.py  server.py  spec.py
src/fmc_mcp/tools/: __init__.py  deploy.py  devices.py  ha.py  interfaces.py  objects.py  policies.py  raw.py  routing.py  system.py  vpn.py
tests/: smoke_test.py  test_client_unit.py
