[project]
name = "firepower-mcp"
version = "0.1.0"
description = "MCP server for Cisco Secure Firewall Management Center (FMC) - REST API coverage"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fmc-mcp = "fmc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmc_mcp"]
