[project]
name = "firepower-mcp"
version = "0.1.0"
description = "MCP server for Cisco Secure Firewall Management Center (FMC) - REST API coverage"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fmc-mcp = "fmc_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fmc_mcp"]

[tool.pytest.ini_options]
# Only collect the FMC-free unit tests (test_*.py). The live smoke suite is
# smoke_test.py and is run directly.
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::ResourceWarning"]

[tool.ruff]
line-length = 100
